# stm32-signal-generator

./: CMakeLists.txt  README.md
integration-test/: CMakeLists.txt
src/: Main.cpp
src/cmd/: Command.cpp  Command.hpp  CommandParser.cpp  CommandParser.hpp
src/peripherals/: ADCPeripheral.cpp  ADCPeripheral.hpp  DACPeripheral.cpp  DACPeripheral.hpp  RCCPeripheral.hpp  UARTPeripheral.hpp
src/shared/: StringFormat.hpp
src/signals/: Frequency.cpp  Frequency.hpp  Level.cpp  Level.hpp  SignalFactory.hpp  WaveForm.cpp
src/sys/: stm32f446xxTypes.hpp
test/: CMakeLists.txt  CommandParserTest.cpp  ExceptionCheck.hpp  FrequencyTest.cpp  LevelTest.cpp  TestModule.cpp  WaveFormTest.cpp
test/mocks/: ADCPeripheralMock.cpp  DACPeripheralMock.cpp
